--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -28,7 +28,7 @@
                         <a href="{% url 'project' random_post.title %}">
                         </a>
                     </div>
-                    <div class="box-content over mi" style="background-image:url()">
+                    <div class="box-content">
                         <a href="{% url 'project' random_post.title %}" class="site-link" aria-label=""></a>
                         <div class="inner vertical-center">
                             <div class="box-info">
