--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -13,13 +13,9 @@
 </head>
 <body>
 
-    {% block content %}
+{% block content %}
 <div class="container-fluid" style="margin-top:5%;">
     <div class="container-fluid">
-        <!DOCTYPE html>
-        <html class="no-js" lang="en">
-        <body class="home" data-debug="0">
-
         <section id="content">
             <div class="content-view">
                 <div class="box-site-head js-single-element"
@@ -105,8 +101,7 @@
                 </div>
             </div>
         </section>
-        </body>
-        </html>
+       
     </div>
 
     <div class="container">
@@ -154,7 +149,7 @@
                             <h4 class="card-title"><a href="{% url 'project' post.title %}">{{post.title|title}}</a> <a
                                     class="btn btn-sm btn-outline-info" href="{{ post.url }}"> View</a></h4>
                             <hr>
-                            <p class="card-text "><img src="{{post.user.profile.profile_picture.url}}"
+                            <p class="card-text "><img src="{{post.user.profile.profile_image.url}}"
                                                        class="nav-img mr-2"
                                                        alt="">
                                 By {{post.user.username|title}} <span style="float:right">{{post.date|date}}</span>
