--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -1,19 +1,19 @@
-{% load bootstrap5 %}
 {% load static %}
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-    
-    {% block styles %}
-    {% bootstrap_css %}
-    
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    {% endblock %}
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0-beta1/js/bootstrap.min.js">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <title>OsAwwards</title>
 </head>
-
 <body>
+{% include 'navbar.html' %}
+{% block content %}
+
+{% endblock %}
+</body>
+</html>
