updating the scc file

--- a/myapp/templates/registration/signup.html
+++ b/myapp/templates/registration/signup.html
@@ -8,7 +8,7 @@
             <div class="card" style="margin-top:2%; padding:20px">
                 <div class="card-body">
                     <h5 class="card-title"><a>Register to be a member</a> <span style="float:right">Are you a member? <a
-                            href="{% url 'login' %}" class="text-info">Login now</a></span></h5>
+                            href="{% url 'signup' %}" class="text-info">Login now</a></span></h5>
                     <div class="card-text">
                         <form action="" method="post" novalidate>
                             {% csrf_token%}
