debug the search functionality

--- a/myapp/templates/project.html
+++ b/myapp/templates/project.html
@@ -39,7 +39,7 @@
         <div class="card-body">
             <h5 class="card-title"><strong>{{post.title|title}}</strong>
                 <a href="{{ post.url }}" style="float:right" class="btn btn-sm btn-info mr-4"> Visit </a></h5>
-            <p>by <span><a href="{% url 'user_profile' post.user.username %}" id="usern" class="mr-2">{{ post.user.username|title }}</a></span>({{post.user.profile.location}})
+            <p>by <span><a href="{% url 'user profile' post.user.username %}" id="usern" class="mr-2">{{ post.user.username|title }}</a></span>({{post.user.profile.location}})
             </p>
             <p>{{ post.description }}</p>
             <hr>
