--- a/myapp/templates/base.html
+++ b/myapp/templates/base.html
@@ -12,11 +12,15 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.2.0-beta1/js/bootstrap.min.js">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>OsAwwards</title>
+{{form.media}}
 </head>
 <body>
 {% include 'navbar.html' %}
 {% block content %}
 
 {% endblock %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" ></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.5/umd/popper.min.js" ></script>
+<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js" integrity="sha256-eTyxS0rkjpLEo16uXTS0uVCS4815lc40K2iVpWDvdSY=" crossorigin="anonymous"></script>
 </body>
 </html>
