--- a/myapp/templates/navbar.html
+++ b/myapp/templates/navbar.html
@@ -38,9 +38,9 @@
                 {% else %}
                 <a href="{% url 'login' %}" class="login btn btn-sm btn-info"> REGISTER/LOGIN </a>
                 {% endif %}
-                <button class="btn btn-info btn-sm" id="site" data-toggle="modal" data-target=".bd-example-modal-xl">
+                <button class="btn btn-info btn-sm" id="site" data-toggle="modal" data-target="bd-example-modal-xl">
                     Submit your site
-                </button>
+            
             </ul>
         </div>
     </div>
