--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -117,7 +117,7 @@
                         </div>
                         <div class="card-body">
                             <h4 class="card-title"><a href="{% url 'project' post.title %}">{{post.title|title}}</a><a
-                                    class="btn btn-sm btn-outline-info"  href="{{ post.url }}" > View</a></h4>
+                                    class="btn btn-sm btn-outline-info"   href="{{ post.url }}"  target="_blank" > View</a></h4>
                             <hr>
                             <p class="card-text "><img src="{{post.user.profile.profile_image.url}}"
                                                        class="nav-img mr-2"
