deployment to heroku

--- a/myapp/templates/index.html
+++ b/myapp/templates/index.html
@@ -26,7 +26,7 @@
                                  width="1900" height="720" class="lazy"/>
                         </a>
                     </div>
-                    <div class="box-content over mi" style="background-image:url()">
+                    <div class="box-content over mi" >
                         <a href="{% url 'project' random_post.title %}" class="site-link" aria-label=""></a>
                         <div class="inner vertical-center">
                             <div class="box-info">
